--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "responsive one-page website designed for businesses looking to establish a strong online presence with minimal complexity",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass -w src/scss/styles.scss src/css/styles.css"
   },
   "repository": {
     "type": "git",
