--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "responsive one-page website designed for businesses looking to establish a strong online presence with minimal complexity",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "sass": "sass -w src/scss/styles.scss src/css/styles.css"
   },
   "repository": {
@@ -17,7 +18,19 @@
   },
   "homepage": "https://github.com/reza-azimifar/one-page-business-website#readme",
   "devDependencies": {
-    "sass": "^1.75.0"
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.1",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "sass": "^1.76.0",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "jquery": "^3.7.1"
