--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "one-page-business-website",
   "version": "1.0.0",
   "description": "responsive one-page website designed for businesses looking to establish a strong online presence with minimal complexity",
-  "main": "index.js",
+  "main": "server.js", 
   "scripts": {
+    "start": "node server.js",
     "build": "webpack --config webpack.config.js",
     "sass": "sass -w src/scss/styles.scss src/css/styles.css"
   },
@@ -17,6 +18,10 @@
     "url": "https://github.com/reza-azimifar/one-page-business-website/issues"
   },
   "homepage": "https://github.com/reza-azimifar/one-page-business-website#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "jquery": "^3.7.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
@@ -31,8 +36,5 @@
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "jquery": "^3.7.1"
   }
 }
